# memory-agent-regulatory

./: .env.example  .gitignore  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  task.md
.github/workflows/: ci.yml
app/: main.py
app/pages/: evaluation.py  memory_explorer.py
config/: config.yaml  document_aliases.yaml
data/evaluation/: report.json  report.md  synthetic_sessions.json
docs/: ARCHITECTURE.md  DECISIONS.md  EVALUATION.md
migrations/: env.py
migrations/versions/: 001_create_memory_tables.py  002_add_response_feedback.py
scripts/: generate_sessions.py  reset_data.py  run_e2e.py  run_evaluation.py  run_ingestion.py  setup_github.sh
src/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
src/config/: __init__.py  settings.py
src/embeddings/: __init__.py  embedding_generator.py  validation.py
src/evaluation/: __init__.py  metrics.py  models.py  report.py  runner.py
src/ingestion/: __init__.py  chunker.py  models.py  pdf_loader.py  source_registry.py  web_scraper.py
src/memory/: __init__.py  conversational.py  database.py  manager.py  models.py  procedural.py  semantic.py  summary.py
src/observability/: tracing.py
src/rag/: __init__.py  context_builder.py  document_aliases.py  prompt_template.py
src/retrieval/: hybrid_search.py  reranker.py  retriever.py  vector_search.py
src/simulation/: __init__.py  models.py  session_generator.py  user_simulator.py  (+1 more)
tests/: conftest.py  helpers.py
(+26 files in other folders)
