[project]
name = "memory-agent-regulatory"
version = "0.1.0"
description = "Memory-aware regulatory Q&A agent with LangGraph, PostgreSQL, and Weaviate"
requires-python = ">=3.12"
authors = [{ name = "Bruno Ramos Martins" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "transformers>=4.30.0",
    "pydantic-settings>=2.0.0,<3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: tests that download large models (~1.3 GB) or take significant time",
    "integration: tests that require external services (Weaviate, PostgreSQL, Ollama)",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
